--- a/Admin/style.css
+++ b/Admin/style.css
@@ -24,6 +24,8 @@ button {
   cursor: pointer;
 }
 
+
+
 button:hover {
   background-color: #45a049;
 }
@@ -32,6 +34,10 @@ button:hover {
   width: 100%;
   height: 600px;
   margin-top: 20px;
+}
+
+#tot-mem {
+  padding: 10px;
 }
 
 table {
@@ -54,4 +60,121 @@ th {
 .eye-icon {
   cursor: pointer;
   color: blue;
+}
+
+/* style.css */
+
+#searchContainer {
+  margin-bottom: 20px;
+  margin-left: 20px;
+}
+
+#searchInput {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-right: 8px;
+  width: 200px;
+}
+
+#searchInput:focus {
+  outline: none;
+  border-color: dodgerblue;
+}
+
+#searchContainer button {
+  padding: 9px 16px;
+  border: none;
+  border-radius: 4px;
+  background-color: dodgerblue;
+  color: white;
+  cursor: pointer;
+}
+
+#searchContainer button:hover {
+  background-color: #007bb6;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  padding-top: 50px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 800px;
+}
+.page {
+  display: none;
+}
+.page.active {
+  display: block;
+}
+
+.Pagebutton .active {
+  background-color: #45a049;
+  color: white;
+}
+
+/* Input Field CSS */
+input[type="text"],
+input[type="date"],
+input[type="email"],
+input[type="password"],
+input[type="number"],
+select,
+textarea {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  width: 100%;
+  box-sizing: border-box; /* Ensure the padding and border are included in the width */
+  margin-bottom: 10px;
+}
+
+/* Focus Styles */
+input:focus,
+textarea:focus {
+  outline: none;
+  border-color: #007bff; /* Change to your preferred focus color */
+  box-shadow: 0 0 5px #007bff; /* Change to your preferred focus shadow */
+}
+
+/* Disabled Styles */
+input:disabled,
+select,
+textarea:disabled {
+  background-color: #f0f0f0; /* Change to your preferred disabled background color */
+  cursor: not-allowed;
+}
+
+.Pagebutton {
+  width: 33%;
+  margin: 0px;
+  color: black;
+  background-color: white;
+  border: 1px solid grey;
+  padding: 20px;
+  border-radius: 0px;
+}
+
+.pagination {
+  display: none;
+}
+
+.sel-search {
+  width: 20%;
+  padding: 7px;
 }
